--- a/Book-Tickets/src/app/components/invoice/invoice.component.css
+++ b/Book-Tickets/src/app/components/invoice/invoice.component.css
@@ -44,12 +44,15 @@
 
 .infor-invoice{
     margin: 50px auto;
-    width: 95%;
-    height: 300px;
-    
+    width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.infor-invoice .btn-cancel{
+#btn{
+    padding-bottom: 50px;
+}
+
+.btn-cancel{
     float: right; 
     padding: 10px; width: 10%;
     border-radius: 10px;
@@ -59,13 +62,13 @@
     font-size: 16px;
 }
 
-.infor-invoice .btn-cancel:hover{
+.btn-cancel:hover{
     cursor: pointer;
     background: -webkit-linear-gradient(#F2754E);  
 
 }
 
-.infor-invoice .btn-back{
+.btn-back{
     float: left; 
     padding: 10px; width: 10%;
     border-radius: 10px;
@@ -75,17 +78,17 @@
     font-size: 16px;
 }
 
-.infor-invoice .btn-back:hover{
+.btn-back:hover{
     cursor: pointer;
 
 }
 
 
-.invoice .invoice-search{
+.invoice-search{
     display: flex; 
 }
 
-.invoice .invoice-search input{
+.invoice-search input{
     width: 60%;
     padding: 10px;
     font-size: 16px;
@@ -112,45 +115,33 @@
 .infor-invoice .title{
     border-radius: 50px;
     color: #009344;
- 
+    padding-top: 50px;
 }
 
-
-
-.infor-invoice p{
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif; 
-    color: white;
-    padding: 10px;
-    margin-top: 0px;
-}
-
-.infor-invoice .infor-invoice-item{
-    display: flex; 
+table{
     width: 100%;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
 }
 
-.infor-invoice .infor-invoice-item p{
-    font-size: 16px;
-    padding:  0px;
-    margin-left: 10px; 
-    width: 60%;
+table tr th {
+    width: 25%;
+    text-align: center;
+}
+
+.label{
+    color: #009344;
     font-family: 'Oswald', sans-serif; 
-    color: black;
+    font-size: 20px;
+    padding: 10px;
 }
 
-.infor-invoice  .btn-function p{
-    margin: 0px;
-    font-size: 16px;
+.value{
+    color: #F2754E;
     font-family: 'Oswald', sans-serif; 
-    padding: 0px;
-    text-align: right;
+    font-size: 20px;
+    padding: 10px;
 }
 
-.infor-invoice  .btn-function p:hover{
-    cursor: pointer;
-}
 
 #btn-search{
     background: #F2754E;
