--- a/Book-Tickets/src/app/components/pay/components/paypall/paypall.component.html
+++ b/Book-Tickets/src/app/components/pay/components/paypall/paypall.component.html
@@ -4,36 +4,35 @@
         <button style="text-align: right; width: 10%;" (click)="onClose()"><i class="far fa-times-circle"></i></button>
     </div>
     <div class="pay-infor">
-        <label>Người mua: <span>{{customerInfor.customerName}}</span></label>
-        <label>Số điện thoại: <span>{{customerInfor.phone}}</span></label>
+        <label>Người mua: <span>{{inforCustomer.name}}</span></label>
+        <label>Số điện thoại: <span>{{inforCustomer.phone}}</span></label>
     </div>
     <hr style="width: 100%;"/>
-    <!--  -->
+
     <div class="pay-infor">
         <label style="font-weight: bold; color: #ef5222;">Vé đi</label>
     </div>
     <div class="pay-infor">
-        <label>Tuyến đường: <span>{{customerInfor.ticketOneWay.departure.ben_toi}} ⇒ {{customerInfor.ticketOneWay.destination.ben_toi}}</span></label>
-        <label>Giờ chạy: <span>{{customerInfor.ticketOneWay.runTime}}:00 h</span></label>
+        <label>Tuyến đường: <span>{{inforRoute.departure.ben_toi}} ⇒ {{inforRoute.destination.ben_toi}}</span></label>
+        <label *ngIf="inforRoute.isOneWay; else elseTwoWay">Tổng tiền: <span style="font-weight: bold;">{{inforSeat.totalMoney}}<sup data-v-6f125f51="">₫</sup></span></label>
+        <ng-template #elseTwoWay>
+            <label >Tổng tiền: <span style="font-weight: bold;">{{tickets[0].totalMoney}}<sup data-v-6f125f51="">₫</sup></span></label>
+        </ng-template>
     </div>
-    <div class="pay-infor">
-        <label>Ghế: 
-            <ng-container *ngFor="let seat of customerInfor.ticketOneWay.seats; let i = index">
-                <span>{{seat.name}}<span *ngIf="i<customerInfor.ticketOneWay.seats.length-1">,</span></span>
-            </ng-container>
-        </label>
-        <label>Tổng tiền: <span style="font-weight: bold;">{{customerInfor.ticketOneWay.totalMoney}}<sup data-v-6f125f51="">₫</sup></span></label>
+    <div *ngIf="!inforRoute.isOneWay;">
+        <div class="pay-infor">
+            <label style="font-weight: bold; color: #ef5222;">Vé về</label>
+        </div>
+        <div class="pay-infor">
+            <label>Tuyến đường: <span>{{inforRoute.destination.ben_toi}} ⇒ {{inforRoute.departure.ben_toi}}</span></label>
+            <label >Tổng tiền: <span style="font-weight: bold;">{{tickets[1].totalMoney}}<sup data-v-6f125f51="">₫</sup></span></label>
+        </div>
     </div>
-    <!--  -->
-    <hr style="width: 100%;"/>
-    <div class="pay-infor">
-        <label for=""></label>
-        <label style="font-weight: bold;">Thanh toán: <span style="font-weight: bold;">{{customerInfor.ticketOneWay.totalMoney}}<sup data-v-6f125f51="">₫</sup></span></label>
-    </div>
-    <div class="btn-payment">
-        <button>Thanh Toán</button>
-    </div>
+
+    <hr style="width: 100%;margin-bottom: 20px;"/>
+
 </section>
 
 <div style="margin:auto; width: 60%; text-align: center;" [hidden]="paidFor" #paypal>
 </div>
+
