complete bus router detail

--- a/Book-Tickets/src/app/components/home/home.component.html
+++ b/Book-Tickets/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <app-header [index]=0></app-header>
 <main>
     <img src="./assets/background.png" alt="">
-    <div class="container" id="adwad">
+    <div class="container" > <!-- id="adwad" -->
         <form action="" class="form-search-route" >
             <div style="margin-bottom: 10px;">
                 <input type="radio" name="type" (click)="onCheckTyeCheck(0)" checked>
