--- a/Book-Tickets/src/app/components/invoice/invoice.component.html
+++ b/Book-Tickets/src/app/components/invoice/invoice.component.html
@@ -1,7 +1,7 @@
 <app-header [index]=3 ></app-header>
 <section *ngIf="!isShow" class="container">
     <div class="invoice">
-        <h2>Tra cuu hoa don</h2>
+        <h2>Tra cứu hóa đơn</h2>
         <div style="margin: 3% 0%;"><label for="">Nhập mã vé</label></div>
        <div style="display:flex; width: 100%; height: 32px;">
            <input type="text" [(ngModel)]="ticketCode">
