--- a/Book-Tickets/src/app/components/pay/components/vnpay/vnpay.component.html
+++ b/Book-Tickets/src/app/components/pay/components/vnpay/vnpay.component.html
@@ -26,5 +26,5 @@
     </div>
 
     <hr style="width: 100%;margin-bottom: 20px;"/>
-    <button (click)="onVnPay()">Thanh Toán</button>
+    <button id="btn-payment" (click)="onVnPay()">Thanh Toán</button>
 </section>
