--- a/Book-Tickets/src/app/components/schedule/detail-schedule/detail-schedule.component.css
+++ b/Book-Tickets/src/app/components/schedule/detail-schedule/detail-schedule.component.css
@@ -14,8 +14,8 @@
 
 .container .transhipment{
     box-shadow: 10px 15px 20px rgba(0, 0, 0, .1);
-    margin: 10px auto;
     border-radius: 10px;
+    margin-top: 30px;
 }
 
 .container .transhipment .title{
@@ -23,44 +23,104 @@
     background: #F7F7F7;
     font-weight: bold;
     color: #F15A24;
-    padding: 10px;
+    padding: 1em 2em;
+    text-align: left;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
-.container .transhipment .title span{
-    font-size: 18px;
-    color:#637280;
-}
-
-.container .transhipment .transhipment-content{
-    font-size: 18px;
-    background: #D9EDF7;
-    text-align: center;
-    padding: 30px;
-    color: #31708F;
-}
-
-.container .transhipment .content-left{
+table{
     width: 100%;
-    background: #d9edf7;
-    text-align: center;
-    font-size: 18px;
-    padding: 20px 0px;
 }
 
-.container .transhipment p{
+table tr th{
+    padding: 20px;
+    font-weight: normal;
+}
+
+.label-station{
+    width: 25%;
     text-align: center;
-    color: #4f5152;
+}
+
+.address{
+    text-align: left;
+}
+
+.label-search{
     font-weight: bold;
+    font-size: 18px;
+    margin-left: 40px;
+}
+
+#search{
+    font-weight: 400 !important;
+    margin-left: 2%;
+    outline: none;
+    border: 0.5px solid #dfdfdf;
+}
+
+.content-left{
+    margin-top: 20px;
+}
+
+#list-route{
+    width: 92%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    margin: 20px auto;
+    border-collapse: collapse;
+   
+}
+
+#list-route tr th{
+    background: #d9edf7;
+   
+}
+
+.price{
+    color: #F15A24;
+}
+
+.btn-book-ticket{
+    background: #F15A24;
+    color: white;
+    width: 10%;
+    border-radius: 10px;
+    padding: 2px;
+}
+
+#list-route tr td{
+    text-align: center;
+    padding: 10px 0px;
+}
+
+#list-route tr:hover{
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.odd{
+    background-color: #fff7f5;
+}
+
+.no-action{
+    width: 15%;
 }
 
 
 .container .transhipment .content-right{
     width: 100%;
-    background: #ffffff;
+    background: #d9edf7 !important;
     text-align: center;
     font-size: 18px;
     padding: 20px 0px;
-    height: 250px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.container .transhipment .content-right p{
+    text-align: left;
+    margin-left: 50px;
 }
 
 .container .continue{
