--- a/Book-Tickets/src/app/components/schedule/detail-schedule/detail-schedule.component.html
+++ b/Book-Tickets/src/app/components/schedule/detail-schedule/detail-schedule.component.html
@@ -2,43 +2,66 @@
 <section class="container">
     <img src="../../assets/schedule.png" alt="">
     <div class="transhipment">
-        <div class="title">
-            Bến xe & VP Trung chuyển
-        </div>
-        <div class="transhipment-content">
-            <p  style="color: #F15A24;">Chưa có thông tin xử lý </p>
-        </div>
+        <h2 class="title">Bến xe & VP Trung chuyển</h2>
+
+        <table>
+            <tr>
+                <th class="label-station">Bến xe {{route.ben_xe_di}}</th>
+                <th class="address">
+                    {{busStationInfor.dia_chi}}
+                </th>
+            </tr>
+        </table>        
     </div>
-    <div class="transhipment" style="border-radius: 10px;">
+    <div class="transhipment">
         <div class="title">
             {{route.ben_xe_di}} ⇒ {{route.ben_xe_toi}} <span>- {{route.khoang_cach}}km - {{route.khoang_thoi_gian}}h</span>
         </div>
         <div class="content-left">
-            <p>Thời gian di chuyển</p>   
-            <div style="display: flex;">
-                <div style="width: 37%;">
-                    <p style="text-align: left; margin-left: 50px;">Sáng :</p>
-                    <ng-container *ngFor="let item of listSang">
-                        <p style="color: #F15A24;">{{item}}:00 h</p>
-                    </ng-container>
+            <section>
+                <div>
+                    <label class="label-search">
+                        Ngày đi: 
+                        <input id="search" type="date" 
+                        [(ngModel)]="date"
+                        min="{{date}}"> 
+                    </label>
                 </div>
-                <div style="width: 35%;">
-                    <p style="text-align: left; margin-left: 50px;">Chiều :</p>
-                    <ng-container *ngFor="let item of listChieu">
-                        <p style="color: #F15A24;">{{item}}:00 h</p>
-                    </ng-container>
+                <div>
+                    <table id="list-route">
+                        <tr>
+                            <th class="no-action">Giờ chạy</th>
+                            <th class="no-action">Giờ đến</th>
+                            <th class="no-action">Giá vé</th>
+                            <th></th>
+                        </tr>
+                        <ng-container  *ngFor="let time of times; let i = index;">
+                            <tr *ngIf="i%2!=0; else elseTimes" class="odd">
+                                <td>{{time.giochay}}:00</td>
+                                <td>***</td>
+                                <td class="price">{{route.gia_ca}} <sup>đ/vé</sup> </td>
+                                <td>
+                                    <button (click)="onBookTicket()" class="btn-book-ticket"> Đặt vé</button>
+                                </td>
+                            </tr>
+                            <ng-template #elseTimes>
+                                <tr>
+                                    <td>{{time.giochay}}:00</td>
+                                    <td>****</td>
+                                    <td class="price">{{route.gia_ca}} <sup>đ/vé</sup> </td>
+                                    <td>
+                                        <button (click)="onBookTicket()" class="btn-book-ticket"> Đặt vé</button>
+                                    </td>
+                                </tr>
+                            </ng-template>
+                            
+                        </ng-container>      
+                    </table>
                 </div>
-                <div style="width: 30%;">
-                    <p style="text-align: left; margin-left: 50px;">Tối : </p>
-                    <ng-container *ngFor="let item of listToi">
-                        <p style="color: #F15A24;">{{item}}:00 h </p>
-                    </ng-container>
-                </div>
-            </div>
+            </section>
         </div>
         <div class="content-right">
-            <p>Nơi xuất phát : <span style="color: #F15A24;">Bến xe {{route.ben_xe_di}}</span> </p>
-            <p style="text-align: left; margin-left: 50px;color: #F15A24;">
+            <p style="color: #F15A24;">
                 (*) Lưu ý:
             </p>
             <p style="text-align: left; margin-left: 100px;">
@@ -47,10 +70,10 @@
             <p style="text-align: left; margin-left: 100px;">
                 - Xin hãy lưu lại thông tin mã vé để tiện cho việc kiểm tra.
             </p>
-            <p style="text-align: left; margin-left: 50px;color: #F15A24;">
+            <p style="color: #F15A24;">
                 (*) Chúc quý khách có một chuyến đi vui vẻ.
             </p>
-            <p style="text-align: left; margin-left: 50px;color: #F15A24;">
+            <p style="color: #F15A24;">
                 (*) Cảm ơn quý khách đã ưu ái nhà xe chúng tôi.
             </p>
         </div>
